# CMakeOpenCVwithACAP

./: CMakeLists.txt  Readme.md  hello_opencv.cpp  package.conf
